Fixed scrolling on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,4 +11,5 @@
 
 body {
     background-color: #FDFBED;
+    overflow-y: visible;
 }
